[tool.poetry]
name = "project-template"
version = "0.1.0"
description = ""
authors = ["Desire Kouadio <desirek43@gmail.com>"]
readme = "README.md"
packages = [{include = "project_template", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
